[package]
name = "zexe-redjubjub"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../zexe/algebra" } #, default-features = false }
groth16 = { path = "../zexe/groth16" } #, default-features = false }

[dependencies.blake2-rfc]
git = "https://github.com/debris/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false
