[package]
name = "zexe-redjubjub"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", default-features = false }

[dependencies.algebra]
git = "https://github.com/scipr-lab/zexe"
rev = "2c22b770afffc8ed99dfca6677bfcea3cf2ff406"
default-features = false

[dependencies.groth16]
git = "https://github.com/scipr-lab/zexe"
rev = "2c22b770afffc8ed99dfca6677bfcea3cf2ff406"
default-features = false

[dependencies.blake2-rfc]
git = "https://github.com/debris/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false
